--- a/foundations/01-css-methods/external.css
+++ b/foundations/01-css-methods/external.css
@@ -1,17 +1,17 @@
-.div{
+div{
     background-color: red;
     font-size: 32px;
     color: white;
     text-align: center;
     font-weight: bold;
 }
-.p{
+p{
    background-color: green;
    font-size: 18px;
    color: white;
 
 }
-.button{
+button{
     background-color: orange;
     font-size: 18px;
 }
